--- a/src/app/features/auth/pages/login-page/login-page.component.html
+++ b/src/app/features/auth/pages/login-page/login-page.component.html
@@ -1,1 +1,58 @@
-<p>login-page works!</p>
+<div class="container-fluid vh-100 d-flex p-0">
+    
+  <div class="col-md-6 d-none d-md-block p-0 auth-page-img">
+  </div>
+
+  <div class="col-md-6 d-flex align-items-center justify-content-center">
+    <div class="login-container">
+      <h3 class="mb-5 fw-semibold">Log in</h3>
+
+      <form [formGroup]="loginForm" (ngSubmit)="onSubmit()" class="auth-form d-flex flex-column">
+        <div class="mb-3 position-relative">
+          <input
+            type="email"
+            class="form-control"
+            formControlName="email"
+            placeholder=" "
+            [class.is-invalid]="loginForm.get('email')?.invalid && (loginForm.get('email')?.dirty || loginForm.get('email')?.touched)"
+            [class.is-valid]="loginForm.get('email')?.valid && (loginForm.get('email')?.dirty || loginForm.get('email')?.touched)"
+          />
+          <label class="floating-label">Email <span class="text-danger">*</span></label>
+        </div>
+
+        <div class="mb-4 position-relative">
+          <div class="position-relative">
+            <input
+              [type]="showPassword ? 'text' : 'password'"
+              class="form-control"
+              formControlName="password"
+              placeholder=" "
+              [class.is-invalid]="loginForm.get('password')?.invalid && (loginForm.get('password')?.dirty || loginForm.get('password')?.touched)"
+              [class.is-valid]="loginForm.get('password')?.valid && (loginForm.get('password')?.dirty || loginForm.get('password')?.touched)"
+            />
+            <label class="floating-label">Password <span class="text-danger">*</span></label>
+            <button
+              type="button"
+              class="btn position-absolute end-0 top-50 translate-middle-y border-0 bg-transparent"
+              (click)="togglePasswordVisibility()"
+              style="z-index: 10;">
+              <i [class]="showPassword ? 'bi bi-eye' : 'bi bi-eye-slash'"></i>
+            </button>
+          </div>
+        </div>
+
+        <button type="submit" class="btn red-btn w-100" [disabled]="loading">
+          {{ loading ? 'Logging in...' : 'Log In' }}
+        </button>
+      </form>
+
+      <p class="text-danger mt-3" *ngIf="error">{{ error }}</p>
+
+      <p class="text-center mt-3 register-text-prompt">
+        Not a member?
+        <a routerLink="/register" class="register-route">Register</a>
+      </p>
+    </div>
+  </div>
+</div>
+
