--- a/src/styles.css
+++ b/src/styles.css
@@ -19,11 +19,11 @@ html, body {
   background-repeat: no-repeat;
 }
 
-.login-container {
+.login-container, .register-container {
   width: 554px;
 }
 
-.login-container h3 {
+.login-container h3, .register-container h3 {
   font-size: 42px;
 }
 
@@ -44,7 +44,7 @@ html, body {
   background-color: #FF4000;
   color: #FFFFFF;
 }
-.register-text-prompt {
+.register-text-prompt, .login-text-prompt {
   display: flex;
   justify-content: center;
   font-weight: 400;
@@ -53,7 +53,7 @@ html, body {
   gap: 8px;
 }
 
-.register-route {
+.register-route, .login-route {
   color: #FF4000;
   font-weight: 500;
   text-decoration: none;
@@ -102,4 +102,51 @@ html, body {
 
 .auth-form {
   gap: 24px;
+}
+
+.avatar-upload-container {
+  display: flex;
+  justify-content: start;
+}
+
+.avatar-upload-label {
+  cursor: pointer;
+  display: block;
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  border: 1px solid #E1DFE1;
+  overflow: hidden;
+  background-color: #f8f9fa;
+  transition: all 0.3s ease;
+}
+
+.avatar-placeholder {
+  width: 100px;
+  height: 100px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  color: #6C757D;
+  font-size: 12px;
+  text-align: center;
+  padding: 10px;
+  border-radius: 50px;
+  border: 1px solid #E1DFE1
+}
+
+.avatar-preview {
+  position: relative;
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  overflow: hidden;
+}
+
+.avatar-image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 50%;
 }
