--- a/src/app/features/products/pages/products-list-page/products-list-page.component.css
+++ b/src/app/features/products/pages/products-list-page/products-list-page.component.css
@@ -5,11 +5,6 @@
   margin-bottom: 2rem;
 }
 
-.product-card:hover {
-  transform: translateY(-4px);
-  box-shadow: 0 8px 24px rgba(0, 0, 0, 0.15);
-}
-
 .product-image-container {
   width: 100%;
   height: 549px;
@@ -21,10 +16,6 @@
   height: 100%;
   object-fit: contain;
   transition: transform 0.3s ease;
-}
-
-.product-card:hover .product-image {
-  transform: scale(1.05);
 }
 
 .product-info {
@@ -118,4 +109,83 @@
 .pagination-btn:disabled{
   color: #10151F;
   cursor: default;
+}
+
+.prodact-pg-title {
+  font-size: 42px;
+}
+
+.dropdown-menu {
+  padding: 16px;
+  border-radius: 8px;
+}
+
+.filter-dropdown-menu {
+  width: 392px;
+}
+
+.dropdown-toggle::after {
+  display: none !important;
+}
+
+.sortby-dropdown-menu {
+  width: 223px;;
+  padding: 16px 0;
+}
+
+.red-btn {
+  padding: 10px 20px;
+}
+
+.btn.show {
+  border: none;
+}
+
+.dropdown-menu p {
+  font-size: 16px;
+  font-weight: 600;
+}
+
+.price-inputs {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.sortby-options div{
+  padding: 8px 16px;
+  cursor: pointer;
+  transition: background-color 0.2s ease;
+}
+
+.sortby-options div:hover {
+  color: #FF4000;
+}
+
+.sortby-options div.active {
+  background-color: #FF4000;
+  color: white;
+}
+
+.sortby-dropdown-menu p {
+  padding-left: 16px;
+}
+
+.price-input::placeholder {
+  color: #6C757D;
+}
+
+.page-info {
+  color: #3E424A;
+  font-weight: 400;
+  font-size: 12px;
+}
+
+.vr {
+  min-height: 14px;
+  margin: auto 0;
+}
+
+.filters-sortby-container {
+  gap: 32px;
 }
