--- a/src/app/features/products/pages/products-list-page/products-list-page.component.html
+++ b/src/app/features/products/pages/products-list-page/products-list-page.component.html
@@ -5,6 +5,66 @@
         <p>Loading products...</p>
     </div>
 
+    <div *ngIf="!loading" class="filters-container row">
+        <div class="col-3 prodact-pg-title fw-semibold">Products</div>
+        <div class="col-9 d-flex justify-content-end align-items-center filters-sortby-container">
+
+            <div class="page-info">
+                <span>Showing {{ currentPage }} - {{ lastPage }} of {{ total }} results</span>
+            </div>
+
+            <div class="vr"></div>
+            
+            <div class="dropdown">
+                <button class="btn dropdown-toggle filter-dropdown" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    <img src="/assets/filter.png" />
+                    Filter
+                </button>
+                <div class="dropdown-menu filter-dropdown-menu">
+                    <p>Select price</p>
+                    <div class="price-inputs">
+                        <div class="position-relative">
+                            <input
+                                type="number"
+                                class="form-control price-input"
+                                placeholder=" "
+                                [(ngModel)]="priceFrom"
+                            >
+                            <label class="floating-label">from <span class="text-danger">*</span></label>
+                        </div>
+
+                        <div class="position-relative">
+                            <input
+                                type="number"
+                                class="form-control price-input"
+                                placeholder=" "
+                                [(ngModel)]="priceTo"
+                            >
+                            <label class="floating-label">to <span class="text-danger">*</span></label>
+                        </div>
+                    </div>
+                    <div class="d-flex justify-content-end mt-2">
+                        <button class="btn red-btn" (click)="onPriceFilterChange()">Apply</button>
+                    </div>
+                </div>
+            </div>
+            <div class="dropdown">
+                <button class="btn dropdown-toggle sortby-dropdown d-flex align-items-center gap-2" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    Sort by <img src="/assets/arrow-down.png" />
+                </button>
+                <div class="dropdown-menu sortby-dropdown-menu">
+                    <p class="mb-1">Sort by</p>
+                    <div class="sortby-options">
+                        <div (click)="setSorting('-created_at')" [class.active]="sortBy === '-created_at'">New products first</div>
+                        <div (click)="setSorting('price')" [class.active]="sortBy === 'price'">Price, low to high</div>
+                        <div (click)="setSorting('-price')" [class.active]="sortBy === '-price'">Price, high to low</div>
+                    </div>
+
+                </div>
+            </div>  
+        </div>
+    </div>
+
     <div *ngIf="!loading" class="products-grid">
         <div class="product-card" *ngFor="let product of products" (click)="onProductClick(product.id)">
             <div class="product-image-container">
