feat(modal): implement success modal for checkout payment flow

--- a/src/app/features/cart/pages/checkout-page/checkout-page.component.html
+++ b/src/app/features/cart/pages/checkout-page/checkout-page.component.html
@@ -154,5 +154,12 @@
     </div>
 
   </div>
-  
+
 </div>
+
+<app-success-modal
+  [isVisible]="showSuccessModal"
+  [title]="'Congrats!'"
+  [message]="'Your order is placed successfully!'"
+  (close)="onModalClose()">
+</app-success-modal>
