--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
 <app-header></app-header>
 <app-side-panel></app-side-panel>
 <router-outlet></router-outlet>
+<app-success-modal></app-success-modal>
