--- a/src/app/shared/components/side-panel/side-panel.component.html
+++ b/src/app/shared/components/side-panel/side-panel.component.html
@@ -9,16 +9,21 @@
   </div>
 
   <div class="cart-content">
-    <div *ngIf="cartItems.length === 0" class="empty-cart">
+    <div *ngIf="isLoading" class="loading-cart">
+      <div class="loading-spinner"></div>
+      <p>Loading cart...</p>
+    </div>
+
+    <div *ngIf="!isLoading && cartItems.length === 0" class="empty-cart">
       <img src="/assets/oops.png" alt="Empty Cart" class="empty-cart-icon">
       <p class="oops">Ooops!</p>
-      <p>You’ve got nothing in your cart just yet...</p>
+      <p>You've got nothing in your cart just yet...</p>
       <button class="btn shop-btn red-btn mt-5" (click)="closePanel()">
         Start Shopping
       </button>
     </div>
 
-    <div *ngIf="cartItems.length > 0" class="cart-items">
+    <div *ngIf="!isLoading && cartItems.length > 0" class="cart-items">
       <div *ngFor="let item of cartItems" class="cart-item">
         <div class="item-image">
           <img [src]="item.cover_image" [alt]="item.name" class="product-image">
@@ -62,7 +67,7 @@
 
   </div>
 
-  <div *ngIf="cartItems.length > 0" class="cart-price-summary">
+  <div *ngIf="!isLoading && cartItems.length > 0" class="cart-price-summary">
       <div class="d-flex justify-content-between align-items-center">
         <span class="total-label">Items subtotal</span>
         <span class="total-amount"> $ {{getItemsSubtotal()}} </span>
@@ -77,7 +82,7 @@
       </div>
     </div>
 
-  <div *ngIf="cartItems.length > 0" class="cart-footer">
+  <div *ngIf="!isLoading && cartItems.length > 0" class="cart-footer">
     <button class="checkout-btn red-btn" (click)="goToCheckout()">
       Go to checkout
     </button>
