--- a/src/app/features/products/pages/product-detail-page/product-detail-page.component.html
+++ b/src/app/features/products/pages/product-detail-page/product-detail-page.component.html
@@ -4,6 +4,9 @@
     <p>Loading product...</p>
   </div>
 
+  <div class="direction-text">
+    Listing / Product
+  </div>
   <div *ngIf="!loading && product" class="product-detail">
     <div class="row justify-content-between">
       <div class="col-md-6">
@@ -41,6 +44,8 @@
                 *ngFor="let color of product.available_colors"
                 class="color-circle"
                 [class.selected]="selectedColor === color"
+                [class.multicolor]="color.toLowerCase() === 'multi'"
+                [class.navy-blue]="color.toLowerCase() === 'navy blue'"
                 [style.background-color]="color.toLowerCase()"
                 (click)="selectColor(color)">
               </div>
@@ -65,7 +70,7 @@
 
           <div class="selection-group">
             <label class="selection-label">Quantity</label>
-            <div class="dropdown" *ngIf="product?.quantity && product.quantity > 0; else quantityUnavailable">
+            <div class="dropdown">
                 <button class="btn dropdown-toggle quantity-dropdown" type="button" data-bs-toggle="dropdown" aria-expanded="false">
                     {{ selectedQuantity }} <img src="/assets/arrow-down.png" />
                 </button>
@@ -78,12 +83,9 @@
                     </div>
                 </div>
             </div>
-            <ng-template #quantityUnavailable>
-              <span class="unavailable-text">Currently unavailable</span>
-            </ng-template>
           </div>
 
-          <button class="btn red-btn add-to-cart-btn" (click)="addToCart()">
+          <button class="btn red-btn add-to-cart-btn" [disabled]="!isAuthenticated" (click)="addToCart()">
             <img src="/assets/shopping-cart-white.png" /> Add to Cart
           </button>
 
