--- a/src/app/shared/components/success-modal/success-modal.component.html
+++ b/src/app/shared/components/success-modal/success-modal.component.html
@@ -14,7 +14,7 @@
       <h2 class="modal-title mb-3">{{ title }}</h2>
       <p class="modal-message">{{ message }}</p>
 
-      <button class="btn red-btn continue-btn" (click)="onClose()">
+      <button class="btn red-btn continue-btn" (click)="onContinueShopping()">
         Continue Shopping
       </button>
     </div>
